# webfinder

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  webfinder.example.toml
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: context-menu.spec.ts  editor.spec.ts  file-operations.spec.ts  file-tree.spec.ts  runner.spec.ts  settings.spec.ts
frontend/e2e/test-fixture/: hello.txt  readme.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: context-menu.tsx  editor-panel.tsx  file-conflict-dialog.tsx  file-tree.tsx  output-panel.tsx  settings-panel.tsx  sidebar-custom.tsx
frontend/src/components/ui/: button.tsx  input.tsx  tooltip.tsx
frontend/src/hooks/: use-file-content.ts  use-file-tree.ts  use-runner.ts
frontend/src/stores/: editor-store.ts  settings-store.ts  ui-store.ts
src/: config.rs  error.rs  frontend.rs  lib.rs  main.rs  server.rs  state.rs
src/fs/: guard.rs  mod.rs  walk.rs  watcher.rs
src/handlers/: file.rs  folder.rs  info.rs  mod.rs  run.rs  search.rs  settings.rs  tree.rs  watch.rs
src/runner/: mod.rs  process.rs
tests/: file_test.rs  folder_test.rs  info_test.rs  run_test.rs  search_test.rs  settings_test.rs  tree_test.rs  watch_test.rs
tests/common/: mod.rs
